<resources>
    <string name="app_name">Tres En Raya</string>
    <string name="tresEnRaya">Tres en Raya</string>
    <string name="facil">Facil</string>
    <string name="dificil">Dificil</string>
    <string name="extremo">Extremo</string>
    <string name="unJugador">1 Jugador</string>
    <string name="dosJugadores">2 Jugadores</string>
    <string name="partidas">Partidas</string>
    <string name="ranking">Ranking</string>
    <string name="modificarNombre">Modificar Nombre</string>
</resources>