<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFD96"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="295dp"
        android:layout_height="301dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962"
        app:useDefaultMargins="true">


        <ImageView
            android:id="@+id/a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/a3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/c3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            app:layout_column="2"
            app:layout_row="2"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/btnDosJugadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dosJugadores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <RadioGroup
        android:id="@+id/radioGroupDificultad"
        android:layout_width="208dp"
        android:layout_height="139dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118">

        <RadioButton
            android:id="@+id/rbFacil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Facil" />

        <RadioButton
            android:id="@+id/rbDificil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dificil" />

        <RadioButton
            android:id="@+id/rbExtremo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Extremo" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/partidas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="349dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/tresEnRaya"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/btnUnJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="inicioJuego"
        android:text="@string/unJugador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

</androidx.constraintlayout.widget.ConstraintLayout>